Fixed alignment of logout button

--- a/src/layouts/topNav/topNav.scss
+++ b/src/layouts/topNav/topNav.scss
@@ -145,7 +145,7 @@
 
 .setting_card{
     width: 16.5rem;
-    height: 8.8rem;
+    height: auto;
     border-radius: 1.2rem;
     border: 1px solid $gray_300;
     background-color: $gray_100;
@@ -156,7 +156,7 @@
     top: 5rem;
     p{
         width: 100%;
-        height: 100%;
+        padding: 1.5rem 0;
         @include flex(center, center, row); 
         font-weight: 600;
         font-size: 1.6rem;
